--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
   },
   "dependencies": {
     "@types/node": "20.3.1",
-    "@types/react": "18.2.12",
-    "@types/react-dom": "18.2.5",
     "next": "13.4.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sharp": "^0.32.1"
+  },
+  "devDependencies": {
+    "@types/react": "18.2.12",
+    "@types/react-dom": "18.2.5",
+    "eslint-config-upleveled": "^4.5.1",
+    "stylelint": "^15.7.0",
+    "stylelint-config-upleveled": "^1.0.2",
     "typescript": "5.1.3"
   }
 }
